--- a/css/styles.css
+++ b/css/styles.css
@@ -72,3 +72,15 @@ footer li{
    padding: 1px;
    font-size: 120%;
 }
+.bienvenido{
+   border: 1px solid rgb(2, 2, 2); 
+   background: rgba(199, 198, 198, 0.301); 
+   border-radius: 8px;
+   margin: 0px 20%;
+}
+.infouno{
+   background: rgba(78, 78, 78, 0.301);
+   padding: 3px;
+   border-radius: 8px;
+   
+}
