--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,18 @@
-*{
-   background: url(../img/fondo.gif);
-   background-repeat: no-repeat;
+body{
+   background: url(../img/fondo.png);
    background-size: cover;
    background-attachment: fixed;
-   color: rgb(255, 255, 255);
    list-style: none;
    font-family:sans-serif;
-   text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+   color: rgb(255, 255, 255);
+}
+*{
+   width: auto;
+}
+
+a{
+   margin: 10px;
+   color: rgb(106, 255, 77);
 }
 .yoinfo img{
    width: 200px;  
@@ -23,15 +29,17 @@
 }
 header{
    text-align: center;
-   padding: 20px;
    border:solid white 2px;
    border-left: none;
    border-right:none ;
-   margin: 50px ;
+   margin: 5% ;
    display:block;
 }
 .espacio{
-   height: 500px;
+   margin: 10%;
+   width: 300px;
+   text-align: center;
+   border-radius: 10px;
 }
 .titulo{
    font-size: 20px;
@@ -42,8 +50,12 @@ marquee {
       color: rgb(106, 255, 77);
 }
 .menu{
-   margin: 10px;
    text-decoration: none;
+   padding:10px;
+   display:inline-block;
+   border: 1px rgba(144, 144, 144, 0.178) solid;
+   border-radius: 8px;
+
 }
 .img{
    width: 20%;
@@ -55,6 +67,7 @@ marquee {
 footer{
    text-align: center;
    border-top: white 1px solid;
+   background: rgba(144, 144, 144, 0.082);
 }
 footer li{
    padding: 5px;
@@ -74,13 +87,20 @@ footer li{
 }
 .bienvenido{
    border: 1px solid rgb(2, 2, 2); 
-   background: rgba(199, 198, 198, 0.301); 
+   background: rgba(199, 198, 198, 0.082); 
    border-radius: 8px;
-   margin: 0px 20%;
+   margin: 0px 10%;
 }
 .infouno{
-   background: rgba(78, 78, 78, 0.301);
+   background: rgba(199, 198, 198, 0.082);
    padding: 3px;
    border-radius: 8px;
    
+}
+.sobremi{
+   padding: 10px; 
+   font-size: 150%;
+}
+.h {
+   text-align: center;  
 }
